--- a/notebooks/Deskewing.ipynb
+++ b/notebooks/Deskewing.ipynb
@@ -23,6 +23,7 @@
    },
    "outputs": [],
    "source": [
+    "# More Boilerplate, don't worry\n",
     "%matplotlib inline\n",
     "from mnist import MNIST\n",
     "def load_dataset(s=\"data\"):\n",
@@ -42,7 +43,45 @@
    },
    "outputs": [],
    "source": [
+    "# Loaded the Libraries\n",
     "(X_train, labels_train), (X_test, labels_test) = load_dataset()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Deskewing\n",
+    "\n",
+    "When we write, we often write at angles to the paper, which cause letters and numbers to be skewed. Unfortunately, unlike the human eye, computers cannot easily find similarities between images that are transformations of each other. Thus, the process of *deskewing*\n",
+    "\n",
+    "Very formally, **deskewing** is the process of straightening an image that has been scanned or written crookedly — that is an image that is slanting too far in one direction, or one that is misaligned.\n",
+    "\n",
+    "In particular, we model the process of deskewing as an affine transformation. We assume that when the image was created (the skewed version), it is actually some affine  skew transformation on the image $ Image' = A(Image) + b$ which we do not know. What we do know is that we want the center of mass to be the center of the image, and that we'd like to know the angle at which it was skewed.\n",
+    "\n",
+    "\n",
+    "![](https://geometrypreapteacher.wikispaces.com/file/view/skew.jpg/85225087/skew.jpg)\n",
+    "The methodology goes as follows:\n",
+    "\n",
+    "1) Find the center of mass of the image to figure out how much we need to offset the image  \n",
+    "2) Find the covariance matrix of the image pixel intensities (we can use this to approximate the skew of the angle)\n",
+    "\n",
+    "The function **moments** below, calculates these relevant quantities\n",
+    "\n",
+    "Next, we'd like to calculate the matrix which will allow us to skew \"back\" to the original image\n",
+    "\n",
+    "This is given by the following formula\n",
+    "\n",
+    "$$\\begin{bmatrix}1 & 0 \\\\ \\alpha & 1\\end{bmatrix}$$\n",
+    "\n",
+    "where $\\alpha = \\frac{Cov(X,Y)}{Var(X)}$\n",
+    "\n",
+    "Furthermore, we have an offset of $\\mu - $ center\n",
+    "\n",
+    "\n",
+    "Thus, combining the two,  using the handy *interpolation* library from scipy, we complete the method **deskew** below. \n",
+    "\n",
+    "Check out the results below!"
    ]
   },
   {
@@ -79,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 44,
    "metadata": {
     "collapsed": true
    },
@@ -88,7 +127,7 @@
     "from scipy.ndimage import interpolation\n",
     "\n",
     "def moments(image):\n",
-    "    c0,c1 = np.mgrid[:image.shape[0],:image.shape[1]] # A trick in numPy to create a \n",
+    "    c0,c1 = np.mgrid[:image.shape[0],:image.shape[1]] # A trick in numPy to create a mesh grid\n",
     "    totalImage = np.sum(image) #sum of pixels\n",
     "    m0 = np.sum(c0*image)/totalImage #mu_x\n",
     "    m1 = np.sum(c1*image)/totalImage #mu_y\n",
@@ -102,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 159,
+   "execution_count": 45,
    "metadata": {
     "collapsed": true
    },
@@ -113,7 +152,6 @@
     "    alpha = v[0,1]/v[0,0]\n",
     "    affine = np.array([[1,0],[alpha,1]])\n",
     "    ocenter = np.array(image.shape)/2.0\n",
-    "\n",
     "    offset = c-np.dot(affine,ocenter)\n",
     "    return interpolation.affine_transform(image,affine,offset=offset)"
    ]
@@ -271,6 +309,197 @@
    "source": [
     "newim2 = elastic_transform(X_train[0].reshape(28,28),36,6)\n",
     "plt.imshow(newim2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn import linear_model\n",
+    "import sklearn.metrics as metrics"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": false
+   },
+   "outputs": [],
+   "source": [
+    "def createModel(x,y):\n",
+    "    yp = OneHotEncoder()\n",
+    "    y = yp.fit_transform(y.reshape(60000,1)).toarray()\n",
+    "    clf = linear_model.Ridge (alpha = 0)\n",
+    "    clf.fit(x,y)\n",
+    "    return clf\n",
+    "\n",
+    "def predict(model,x):\n",
+    "    return np.argmax(model.predict(x),axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "model_unchanged = createModel(X_train,labels_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.85645000000000004"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(predict(model_unchanged,X_train),labels_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.8589"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(predict(model_unchanged,X_test),labels_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "def deskewAll(X):\n",
+    "    currents = []\n",
+    "    for i in range(len(X)):\n",
+    "        currents.append(deskew(X[i].reshape(28,28)).flatten())\n",
+    "    return np.array(currents)\n",
+    "\n",
+    "X_train_deskewed = deskewAll(X_train)\n",
+    "X_test_deskewed = deskewAll(X_test)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "model_deskewed = createModel(X_train_deskewed,labels_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.91033333333333333"
+      ]
+     },
+     "execution_count": 49,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(predict(model_deskewed,X_train_deskewed),labels_train)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.91400000000000003"
+      ]
+     },
+     "execution_count": 50,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "metrics.accuracy_score(predict(model_deskewed,X_test_deskewed),labels_test)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Overall Results\n",
+    "\n",
+    "Using L2 Regularized Regression (Ridge Regression), we have\n",
+    "\n",
+    "\n",
+    "### Unchanged\n",
+    "\n",
+    "Train Accuracy: .8564  \n",
+    "Test Accuracy: .8589\n",
+    "\n",
+    "### Deskewed\n",
+    "\n",
+    "Train Accuracy: .9103  \n",
+    "Test Accuracy: .9140\n",
+    "\n",
+    "\n",
+    "**Thus by using deskewed features, we automatically boost our accuracy rougly 6%! Crazy!** "
    ]
   }
  ],
