touched up conclusion for perturbing.ipynb

--- a/notebooks/Deskewing.ipynb
+++ b/notebooks/Deskewing.ipynb
@@ -44,7 +44,7 @@
    "outputs": [],
    "source": [
     "# Loaded the Libraries\n",
-    "(X_train, labels_train), (X_test, labels_test) = load_dataset()\n"
+    "(X_train, labels_train), (X_test, labels_test) = load_dataset()"
    ]
   },
   {
@@ -195,7 +195,7 @@
     "\n",
     "for examplenum,num in examples:\n",
     "    im = grid[2*num].imshow(X_train[examplenum].reshape(28,28))\n",
-    "    im2 = grid[2*num+1].imshow(deskew(X_train[examplenum].reshape(28,28)))\n"
+    "    im2 = grid[2*num+1].imshow(deskew(X_train[examplenum].reshape(28,28)))"
    ]
   },
   {
@@ -240,7 +240,7 @@
     "\n",
     "newim = deskew(X_train[3].reshape(28,28))\n",
     "plt.subplot(1, 2, 2)\n",
-    "plt.imshow(newim)\n"
+    "plt.imshow(newim)"
    ]
   },
   {
@@ -444,7 +444,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
