--- a/notebooks/Perturbing.ipynb
+++ b/notebooks/Perturbing.ipynb
@@ -687,13 +687,17 @@
     "### Train with Perturbations\n",
     "\n",
     "Train Accuracy: 82.15%  \n",
-    "Test Accuracy: 67.44%\n",
+    "Test Accuracy: 67.45%\n",
+    "\n",
+    "We additionally found that deskewing would overfit the training data with an average training accuracy of 99.6% and test accuracy of 98.6%, with a 1% deficit.\n",
+    "\n",
+    "On the other, training with perturbations on top of deskewing would result in an average training accuracy of 99.2% and test accuracy of 98.7%, leaving an average of 0.5% deficit.\n",
     "\n",
     "##Conclusion\n",
     "\n",
-    "We see that training with perturbations doubled our test accuracy, when testing against noisier datasets. In iother words, the second classifier is far more generalized than the first.\n",
+    "We see that training with perturbations doubled our test accuracy, when testing against noisier datasets. In other words, the second classifier is far more generalized than the first.\n",
     "\n",
-    "This demonstration is flawed, as we train for the very transformations that we test against. However, this demonstrates that even training on singleton transformations is enough to make a classifier more robust, against combinations of transformations. Thus, we can apply this more broadly by identifying only a few transformations."
+    "This demonstration is flawed, as we train for the very transformations that we test against. However, this demonstrates that even training on singleton transformations is enough to make a classifier more robust, against combinations of transformations. Thus, we can apply this more broadly by identifying only a few transformations to represent a vast majority of noise."
    ]
   }
  ],
